@@ -1,3 +1,14 @@
+2012-11-20  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r133859.
+        http://trac.webkit.org/changeset/133859
+        https://bugs.webkit.org/show_bug.cgi?id=102875
+
+        This patch makes API test broken (Requested by gyuyoung on
+        #webkit).
+
+        * Scripts/webkitperl/FeatureList.pm:
+
 2012-11-20  Jinwoo Song  <jinwoo7.song@samsung.com>
 
         [EFL][WK2] Add Ewk_Window_Features API and related UI callbacks
